Fix empty inputs collapsing in IOS

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -29,6 +29,7 @@ ul {
 }
 
 input {
+    min-height: 2.5rem;
     -webkit-appearance: none;
     border-radius: 0;
 }
